[package]
name = "market_game"
version = "0.1.0"
authors = ["Mohammed El Batya <elbatya@googlemail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.5.1"
uuid = {version = "0.7.4", features = ["v4", "serde"]}
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "uuid"]

